<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->
<!-- Mortgage Calculator's XML Layout -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFF" android:id="@+id/tableLayout"
    android:stretchColumns="1,2,3" android:padding="5dp">

    <!-- tableRow0 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow0">
        <TextView android:id="@+id/PurchasePriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PurchasePrice" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/PurchasePriceEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:inputType="numberDecimal" android:layout_weight="1">
        </EditText>
    </TableRow>

    <!-- tableRow1 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow1">
        <TextView android:id="@+id/DownPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DownPayment" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/DownPaymentEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:inputType="numberDecimal" android:layout_weight="1">
        </EditText>
    </TableRow>

    <!-- tableRow2 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow2">
        <TextView android:id="@+id/LoanAmountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoanAmount" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/LoanAmountEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="false" android:longClickable="false">
        </EditText>
    </TableRow>

    <!-- tableRow3 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow3">
        <TextView android:id="@+id/customInterestRateTextView"
            android:layout_width="wrap_content" android:text="@string/InterestRate"
            android:textColor="#000" android:paddingRight="5dp"
            android:gravity="right|center_vertical"
            android:layout_height="match_parent" android:paddingBottom="5dp"
            android:focusable="false"></TextView>
        <SeekBar android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/customInterestRateSeekBar" android:layout_span="2"
            android:progress="0" android:paddingLeft="8dp"
            android:paddingRight="8dp" android:paddingBottom="5dp"
            android:layout_weight="1"></SeekBar>
        <TextView android:id="@+id/InterestRateTextView"
            android:layout_width="wrap_content" android:text="0%"
            android:textColor="#000" android:gravity="center_vertical"
            android:layout_height="match_parent" android:paddingLeft="5dp"
            android:paddingBottom="5dp" android:focusable="false"
            android:layout_weight="1"></TextView>
    </TableRow>

    <!-- tableRow4 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow4">
        <TextView android:id="@+id/tenYearMonthlyPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenYearMonthlyPayment" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/tenYearMonthlyPaymentEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="false" android:longClickable="false">
        </EditText>
    </TableRow>

    <!-- tableRow5 -->
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent" android:id="@+id/tableRow5">
        <TextView android:id="@+id/twentyYearMonthlyPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyYearMonthlyPayment" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/twentyYearMonthlyPaymentEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="false" android:longClickable="false">
        </EditText>
    </TableRow>
    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRow6">
        <TextView android:id="@+id/thirtyYearMonthlyPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyYearMonthlyPayment" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/thirtyYearMonthlyPaymentEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="false" android:longClickable="false">
        </EditText>
    </TableRow>


    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tableRow7">
        <TextView android:id="@+id/customMonthsTextView"
            android:layout_width="wrap_content" android:text="@string/customYears"
            android:textColor="#000" android:paddingRight="5dp"
            android:gravity="right|center_vertical"
            android:layout_height="match_parent" android:paddingBottom="5dp"
            android:focusable="false"></TextView>
        <SeekBar android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/customYearsSeekBar" android:layout_span="2"
            android:progress="0" android:paddingLeft="8dp"
            android:paddingRight="8dp" android:paddingBottom="5dp"
            android:layout_weight="1"></SeekBar>
        <TextView android:id="@+id/YearsTextView"
            android:layout_width="wrap_content" android:text="0%"
            android:textColor="#000" android:gravity="center_vertical"
            android:layout_height="match_parent" android:paddingLeft="5dp"
            android:paddingBottom="5dp" android:focusable="false"
            android:layout_weight="1"></TextView>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tableRow8">
        <TextView android:id="@+id/CustomMonthlyPaymentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customMonthlyPayment" android:textColor="#000"
            android:gravity="right" android:paddingRight="5dp"></TextView>
        <EditText android:layout_width="wrap_content"
            android:id="@+id/CustomMonthlyPaymentEditText"
            android:layout_height="wrap_content" android:layout_span="3"
            android:layout_weight="1"
            android:cursorVisible="false" android:longClickable="false">
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">



    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </TableRow>
</TableLayout>